# integration

./: CMakeCache.txt  CMakeLists.txt  Introduction  README.md  german.info  response.txt
Cpp23Practise/: lebels.cpp
client/: CMakeLists.txt  integrationClient.cpp  integrationClient.h
inc/: AbstractFactory.hpp  Bridge.h  C11.hpp  DLinkedList.h  Decorator.hpp  KumarAlgoImpl.h  Modern.hpp  MyGC.hpp  MyLogger.hpp  MyStack.h  MyString.hpp  Observer.hpp  Quad.h  Queue_Array.hpp  Rectangle.h  RefCount.h  Shape.h  SmtPtr.h  Templates.hpp  Threads.cpp  Threads.hpp  Triangle.h  algo.h  algorithm.h  bit_manipulation.hpp  btree.hpp  calc.h  command_pattern.h  count.h  dp.hpp  fp.hpp  kumar_hash.hpp  linked_list.h  my_project_app.h  node.h  programming.h  tree.h  utility.h
integrated/integrated-Test/: TestMyString.cpp  integrated-Test.vcxproj  pch.h  test.cpp
integrated/integrated-Test/x64/Debug/: vc141.idb
integrated/integrated-Test/x64/Debug/integrated-Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  integrated-Test.lastbuildstate  integrated-Test.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
js/: IntegrationApp.js  index.html
source/: C11.cpp  DLinkedList.cpp  KumarAlgoImpl.cpp  MyLogger.cpp  MyStack.cpp  MyString.cpp  OOPs.cpp  Queue.cpp  Rectangle.cpp  Stack.cpp  Templates.cpp  Triangle.cpp  algo.cpp  algorithm.cpp  bit_manipulation.cpp  btree.cpp  calc.cpp  count.cpp  dp.cpp  fp.cpp  gc.cpp  kumar_hash.cpp  linked_list.cpp  main.cpp  programming.cpp  tree.cpp  utility.cpp
source/js/: index.html  main.js
test/: CMakeLists.txt  main_test.cpp  programming_test.cpp
test/input/: sort_file.txt.txt
